--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "truffle-flattener": "^1.2.5"
   },
   "dependencies": {
-    "@0xcert/ethereum-utils": "^1.0.0",
-    "@0xcert/ethereum-erc20": "^1.2.1"
+    "@0xcert/ethereum-erc20": "^1.2.1",
+    "@0xcert/ethereum-utils": "1.0.1"
   }
 }
